36/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
  - host: app
    http:
      paths:
      - path: /random
        pathType: Prefix
        backend:
          service:
            name: random-number-client-svc
            port:
              number: 8055
  - host: app
    http:
      paths:
      - path: /x
        pathType: Prefix
        backend:
          service:
            name: spacex-app
            port:
              number: 8056
