36/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
spec:
  ingressClassName: nginx
  defaultBackend:            # اگه هیچ path ای match نشد
    service:
      name: app1-svc
      port:
        number: 80
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/app1"
        backend:
          service:
            name: app1-svc
            port:
              number: 80
      - pathType: Prefix
        path: "/app2"
        backend:
          service:
            name: app2-svc
            port:
              number: 80
